--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 
 <body>
     <form id="form">
-      <input type="text" />
-      <input type="submit" value="Submit"/>
+       <input type="text" id="rope-lengths" name="rope-lengths"><br><br>
+      <input type="button" value="Calculate Minimum Cost" onclick="calculateMinCost()"><br><br>
     </form>
     <div id="result"></div>
     <script type="text/javascript" src="./script.js"></script>
